# Project3-Multimodal-RAG

./: main.py  my_llm.py  pyproject.toml
dots_mocr/: __init__.py  parser.py
dots_mocr/model/: inference.py
dots_mocr/utils/: doc_utils.py  format_transformer.py  image_utils.py  layout_utils.py  prompts.py  svg_utils.py
dots_ocr/: parser.py
evaluate/: evaluator.py  evaluator0.4.py
graph/: all_router.py  evaluate_node.py  rag_graph.py  rag_state.py  save_context.py  search_node.py  tools.py
milvus_db/: collections_operator.py  db_operator.py  db_retriever.py
splitters/: splitter_md.py
utils/: common_utils.py  cuda_test.py  embeddings_utils.py  env_utils.py  gme_inference.py  gme_test.py  nvidia_test.py
